--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -24,7 +24,7 @@
   </div>
 
   <div class="about-image">
-    <img src="{{ url_for('static', filename='Instituicao.png') }}" alt="UniCEUB - Instituição" />
+    <img src="{{ url_for('static', filename='instituicao.png') }}" alt="UniCEUB - Instituição" />
   </div>
 </section>
 
